<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleMuseo">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenDetalleMuseum"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop" />




                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="150dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/nombreDetalleMuseum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:text=""
                                android:textColor="#000"
                                android:textSize="28sp" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_gravity="center"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/star"
                                    android:textSize="20sp" />
                                <TextView
                                    android:id="@+id/calificacionDetalleMuseum"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="20dp"
                                    android:text="5.0"

                                    />
                            </LinearLayout>


                            <TextView
                                android:id="@+id/direccionDetalleMuseum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:textColor="#555" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detalles"
                                android:textColor="#555"
                                android:textStyle="italic"
                                android:layout_marginTop="10dp"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gratis"
                                android:textColor="#555"
                                />
                            <TextView
                                android:id="@+id/gratisDetalleMuseum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detalles"
                                android:textColor="#555"
                                 />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gratisEstudiantes"
                                android:textColor="#555"
                                />
                            <TextView
                                android:id="@+id/gratisEstudiantesDetalleMuseum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detalles"
                                android:textColor="#555"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gratisDomingo"
                                android:textColor="#555"
                                 />
                            <TextView
                                android:id="@+id/gratisDomingoDetalleMuseum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detalles"
                                android:textColor="#555"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/categorias"
                                android:textColor="#555"
                                 />
                            <TextView
                                android:id="@+id/categoriaDetalleMuseum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/mapa"
                                android:textColor="#555"
                                android:layout_marginTop="10dp"
                                android:textStyle="italic" />
                            <fragment
                                android:id="@+id/mapDetalle"
                                android:name="com.google.android.gms.maps.SupportMapFragment"
                                android:layout_width="match_parent"
                                android:layout_height="180dp"/>


                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>